Add memory tooltips to top-level nodes and fixed physical view for NMT node